More responsive fixes
- Footer got messy with 4 numbers on it, so the breakpoint got increased
- At Servicos.jsx page, the multiple lists side by side got cropped in small screens

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -29,7 +29,7 @@
 	text-align: right;
 }
 
-@media screen and (max-width: 459px) {
+@media screen and (max-width: 550px) {
 	.Footer div {
     width: 100%;
     margin: 1rem 3rem;
