--- a/src/components/pages/servicos/Servicos.css
+++ b/src/components/pages/servicos/Servicos.css
@@ -120,4 +120,15 @@
   .Servicos .content {
     margin-top: 4rem;
   }
+
+  .Servicos .content article .listas {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .Servicos .content article .listas ul {
+    flex: 1 180px;
+    margin: 1rem;
+  }
 }
